--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,35 @@
 attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.2
+cycler==0.10.0
+falcon==3.0.1
+gunicorn==20.1.0
+idna==3.2
 iniconfig==1.1.1
+joblib==1.0.1
+kiwisolver==1.3.1
+matplotlib==3.4.2
+mlxtend==0.18.0
+mypy==0.910
+mypy-extensions==0.4.3
 numpy==1.21.0
 packaging==21.0
 pandas==1.3.0
+Pillow==8.3.1
 pluggy==0.13.1
 py==1.10.0
 pyparsing==2.4.7
 pytest==6.2.4
 python-dateutil==2.8.2
+python-slugify==5.0.2
 pytz==2021.1
+requests==2.26.0
+scikit-learn==0.24.2
+scipy==1.7.0
 six==1.16.0
+text-unidecode==1.3
+threadpoolctl==2.2.0
 toml==0.10.2
+tqdm==4.61.2
+typing-extensions==3.10.0.0
+urllib3==1.26.6
