--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ pip-selfcheck.json
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm,python,virtualenv
 {"mode":"full","isActive":false}
+falcon_server/
