--- a/requirements.txt
+++ b/requirements.txt
@@ -19,10 +19,12 @@ decorator==5.0.9
 defusedxml==0.7.1
 entrypoints==0.3
 falcon==3.0.1
+fire==0.4.0
 gitdb==4.0.7
 GitPython==3.1.18
 gunicorn==20.1.0
 idna==3.2
+importlib-metadata==3.10.1
 iniconfig==1.1.1
 ipykernel==6.0.3
 ipython==7.25.0
@@ -81,6 +83,7 @@ Send2Trash==1.7.1
 six==1.16.0
 smmap==4.0.0
 streamlit==0.85.0
+termcolor==1.1.0
 terminado==0.10.1
 testpath==0.5.0
 text-unidecode==1.3
@@ -90,6 +93,7 @@ toolz==0.11.1
 tornado==6.1
 tqdm==4.61.2
 traitlets==5.0.5
+typed-ast==1.4.3
 typing-extensions==3.10.0.0
 tzlocal==2.1
 urllib3==1.26.6
@@ -98,4 +102,4 @@ watchdog==2.1.3
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.1
-
+zipp==3.5.0
